# sdf-cpp-core

./: CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake-multi-platform.yml
include/: sdf_cpp_core.h
include/sdf/: sdf_cpp_core.h
src/: sdf_cpp_core.cpp
